# the-question-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.codex/: config.toml
alembic/: env.py
alembic/versions/: 6263346d2455_update_models.py  7f3d2b1c9e8f_add_skill_draft_suggestions.py  8140ad6478a8_add_skill_suggestion_reason.py  84de1a031ff1_init.py  9b7a2c1d4e5f_use_datetime6_timestamps.py  c1a2b3c4d5e6_add_skill_avatar.py
app/: main.py
app/core/: config.py  env.py  logging.py  providers.py
app/db/: init_db.py  session.py
app/models/: __init__.py  base.py  chat_message.py  chat_session.py  enums.py  memory_item.py  notification.py  refresh_token.py  report.py  skill.py  skill_comment.py  skill_comment_like.py  skill_comment_reply.py  skill_draft_suggestion.py  skill_favorite.py  skill_rating.py  skill_suggestion.py  skill_version.py  user.py
app/schemas/: ai.py  auth.py  chat.py  chat_alias.py  (+6 more)
scripts/: api_test.py  seed_market_skills.py
tests/: conftest.py  test_ai.py  test_ai_debug_log.py  test_ai_routing.py  test_ai_skill_draft_suggestion.py  test_ai_skill_suggestion.py  test_ai_stream_fallback.py  test_ai_stream_registry.py  test_ai_tools.py  test_api_script.py  test_auth.py  test_chat.py  test_chat_aliases.py  test_config_defaults.py  test_db_session.py  test_default_providers_config.py  test_env.py  test_frontend_static.py  test_health.py  test_init_db.py  test_logging.py  test_market.py  test_me_aliases.py  test_memory_notifications_reports.py  test_skill_seed.py  test_skills.py
(+38 files in other folders)
